- Migrated to latest aws sdk and refactored SQS handling